# bservices

./: .gitignore  ChangeLog  METADATA  PKG-INFO  README.md  README.rst  requirements.txt  setup.cfg
bservices/: __init__.py  api_version.py  config.py  exception.py  i18n.py  middleware.py  server.py  service.py  utils.py  wsgi.py  wsgi_base.py
bservices/cmd/: pool.py  task.py  tcp.py  wsgi.py
bservices/config/: __init__.py  opts.py
bservices/contrib/: api_version.py
bservices/examples/: example_server.py  pool_server_example.py  task_server_example.py  tcp_server_example.py  wsgi_server_daemon.py  wsgi_server_example.py
bservices/examples/db/: api.py
bservices/examples/db/sqlalchemy/: api.py  models.py
etc/: bservices.conf
