[metadata]
name = bservices
summary = A server service library from the components of Openstack
description-file =
    README.rst
author = xgfone
author-email = xgfone@126.com
home-page = https://github.com/xgfone/bservices
license = Apache License 2.0
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    bservices

[entry_points]
console_scripts =
    bservices-wsgi = bservices.cmd.wsgi:main
    bservices-tcp = bservices.cmd.tcp:main
    bservices-pool = bservices.cmd.pool:main
    bservices-task = bservices.cmd.task:main

oslo.config.opts =
    bservices.config = bservices.config.opts:list_opts

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = bservices/locale
domain = bservices

[update_catalog]
domain = bservices
output_dir = bservices/locale
input_file = bservices/locale/bservices.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = bservices/locale/bservices.pot

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1

[pbr]
# Have pbr generate the module indexes like sphinx autodoc
autodoc_index_modules = True

# Exclude modules that won't build with autodoc (or that we don't want doc'ed);
# this requires updating the exclude_patterns variable in doc/source/conf.py
#autodoc_exclude_modules =
#    bservices.test.*

# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
warnerrors = true
